Removes curved corners on input on mobile, fixes #11

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -182,5 +182,6 @@ svg {
   text-transform: inherit;
   background: inherit;
   border: none;
+  border-radius: 0;
   border-bottom: 1px solid #777;
 }
